--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,12 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.0",
-        "laravelcollective/html": "^6.4"
+        "laravelcollective/html": "^6.4",
+        "maatwebsite/excel": "^1.1",
+        "mpdf/mpdf": "^8.2",
+        "phpoffice/phpspreadsheet": "^1.12",
+        "predis/predis": "^2.2",
+        "tecnickcom/tcpdf": "^6.6"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
